{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 66,
  "lineage": "3f41c9a5-79fc-ba11-a548-fd1a23bf9977",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "custom_firewall_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-02-28T23:10:21.973-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/csye6225tarundev/global/firewalls/allow-port-3000",
            "log_config": [],
            "name": "allow-port-3000",
            "network": "https://www.googleapis.com/compute/v1/projects/csye6225tarundev/global/networks/csye6225-network-2",
            "priority": 1000,
            "project": "csye6225tarundev",
            "self_link": "https://www.googleapis.com/compute/v1/projects/csye6225tarundev/global/firewalls/allow-port-3000",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.csye6225_vpc_network"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-02-28T23:10:22.006-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/csye6225tarundev/global/firewalls/allow-port-22",
            "log_config": [],
            "name": "allow-port-22",
            "network": "https://www.googleapis.com/compute/v1/projects/csye6225tarundev/global/networks/csye6225-network-2",
            "priority": 1000,
            "project": "csye6225tarundev",
            "self_link": "https://www.googleapis.com/compute/v1/projects/csye6225tarundev/global/firewalls/allow-port-22",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.csye6225_vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "global_address",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.163.0.0",
            "address_type": "INTERNAL",
            "creation_timestamp": "2024-02-28T23:10:22.147-08:00",
            "id": "projects/csye6225tarundev/global/addresses/global-psconnect-ip-1",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "global-psconnect-ip-1",
            "network": "https://www.googleapis.com/compute/v1/projects/csye6225tarundev/global/networks/csye6225-network-2",
            "prefix_length": 16,
            "project": "csye6225tarundev",
            "purpose": "VPC_PEERING",
            "self_link": "https://www.googleapis.com/compute/v1/projects/csye6225tarundev/global/addresses/global-psconnect-ip-1"
          },
          "dependencies": [
            "google_compute_network.csye6225_vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "webapp_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/csye6225tarundev/global/images/csye6225-image-a3",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 100,
                    "type": "pd-balanced"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/csye6225tarundev/zones/us-central1-a/disks/webapp-instance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/csye6225tarundev/zones/us-central1-a/instances/webapp-instance",
            "instance_id": "5694176504973198534",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-2",
            "metadata": {
              "DB_HOST": "10.163.0.2",
              "DB_NAME": "webapp",
              "DB_PASSWORD": "548%UbvP6!r%JWA{",
              "DB_USER": "webapp"
            },
            "metadata_fingerprint": "IE_lpkuocls=",
            "metadata_startup_script": "#!/bin/bash\r\necho \"Web application is starting up...\"\r\nif [[ ! -e /tmp/webapp/.env ]]; then\r\n  touch /tmp/webapp/.env\r\nfi\r\n\r\nif [[ ! -e \"/var/run/webapp_configured\" ]]; then\r\n  echo \"Configuring web application...\"\r\n  {\r\n    echo \"DB_USER=webapp\"\r\n    echo \"DB_PASSWORD=548%UbvP6!r%JWA{\"\r\n    echo \"DB_HOST=10.163.0.2\"\r\n    echo \"DB_NAME=webapp\"\r\n  } \u003e\u003e /tmp/webapp/.env\r\n\r\n  touch /var/run/webapp_configur [...]
            "name": "webapp-instance",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.188.11.123",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/csye6225tarundev/global/networks/csye6225-network-2",
                "network_ip": "10.20.0.6",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/csye6225tarundev/regions/us-central1/subnetworks/webapp-subnetwork",
                "subnetwork_project": "csye6225tarundev"
              }
            ],
            "project": "csye6225tarundev",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/csye6225tarundev/zones/us-central1-a/instances/webapp-instance",
            "service_account": [
              {
                "email": "738558818349-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring.write",
                  "https://www.googleapis.com/auth/service.management.readonly",
                  "https://www.googleapis.com/auth/servicecontrol",
                  "https://www.googleapis.com/auth/trace.append"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-port-22",
              "allow-port-3000"
            ],
            "tags_fingerprint": "kWy_vOq4VC8=",
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "metadata"
              },
              {
                "type": "index",
                "value": {
                  "value": "DB_PASSWORD",
                  "type": "string"
                }
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "metadata_startup_script"
              }
            ]
          ],
          "dependencies": [
            "google_compute_global_address.global_address",
            "google_compute_network.csye6225_vpc_network",
            "google_compute_project_metadata.web_metadata",
            "google_compute_subnetwork.webapp",
            "google_service_networking_connection.webapp_private_vpc_connection",
            "google_sql_database_instance.webapp_sql_instance",
            "random_id.random_db_instance_id",
            "random_password.password"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "csye6225_vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": true,
            "enable_ula_internal_ipv6": false,
            "id": "projects/csye6225tarundev/global/networks/csye6225-network",
            "mtu": 0,
            "name": "csye6225-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "7417837118120891218",
            "project": "csye6225tarundev",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/csye6225tarundev/global/networks/csye6225-network"
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": true,
            "enable_ula_internal_ipv6": false,
            "id": "projects/csye6225tarundev/global/networks/csye6225-network-2",
            "mtu": 0,
            "name": "csye6225-network-2",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "6180093234938483538",
            "project": "csye6225tarundev",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/csye6225tarundev/global/networks/csye6225-network-2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_route",
      "name": "hoproute",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "description": "",
            "dest_range": "0.0.0.0/0",
            "id": "projects/csye6225tarundev/global/routes/network-route",
            "name": "network-route",
            "network": "https://www.googleapis.com/compute/v1/projects/csye6225tarundev/global/networks/csye6225-network-2",
            "next_hop_gateway": "https://www.googleapis.com/compute/v1/projects/csye6225tarundev/global/gateways/default-internet-gateway",
            "next_hop_ilb": "",
            "next_hop_instance": "",
            "next_hop_instance_zone": null,
            "next_hop_ip": "",
            "next_hop_network": "",
            "next_hop_vpn_tunnel": "",
            "priority": 1000,
            "project": "csye6225tarundev",
            "self_link": "https://www.googleapis.com/compute/v1/projects/csye6225tarundev/global/routes/network-route",
            "tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.csye6225_vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-02-28T23:10:22.128-08:00",
            "gateway_address": "10.20.1.1",
            "id": "projects/csye6225tarundev/regions/us-central1/subnetworks/db-subnetwork",
            "ip_cidr_range": "10.20.1.0/24",
            "name": "db-subnetwork",
            "network": "https://www.googleapis.com/compute/v1/projects/csye6225tarundev/global/networks/csye6225-network-2",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "csye6225tarundev",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/csye6225tarundev/regions/us-central1/subnetworks/db-subnetwork",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.csye6225_vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "webapp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-02-28T23:10:22.213-08:00",
            "gateway_address": "10.20.0.1",
            "id": "projects/csye6225tarundev/regions/us-central1/subnetworks/webapp-subnetwork",
            "ip_cidr_range": "10.20.0.0/24",
            "name": "webapp-subnetwork",
            "network": "https://www.googleapis.com/compute/v1/projects/csye6225tarundev/global/networks/csye6225-network-2",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "csye6225tarundev",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/csye6225tarundev/regions/us-central1/subnetworks/webapp-subnetwork",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.csye6225_vpc_network"
          ]
        }
      ]
    }
  ]
}